# discord_gameserver_rc

./: .env_template  .gitignore  Cargo.toml  README.md  todo.md
gameservers/: README.md  whitelist
gameservers/example_server/: config.json  start.sh  status.sh  stop.sh
man/: man.md
man/commands/: gameserver.md  help.md  rating.md
src/: main.rs
src/commands/: gameserver.rs  help.rs  list.rs  mod.rs  rating.rs  start.rs
