[package]
name = "discord_gameserver_rc"
version = "0.1.0"
authors = ["Mixteprix realmixteprix@proton.me"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serenity = "0.12.4"
tabled = "=0.20.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
